log
Thu May 12 15:23:50 UTC 2022: 
 sudoku.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
28e83e8
Thu May 12 16:06:08 UTC 2022: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:50:9: error: unused variable ‘comprobacion’ [-Werror=unused-variable]
   int * comprobacion = (int *)calloc(10, sizeof(int));
         ^~~~~~~~~~~~
sudoku.c:49:7: error: unused variable ‘numcomprob’ [-Werror=unused-variable]
   int numcomprob;
       ^~~~~~~~~~
sudoku.c:48:20: error: unused variable ‘j2’ [-Werror=unused-variable]
   int i,j,k,p, i2, j2;
                    ^~
sudoku.c:48:16: error: unused variable ‘i2’ [-Werror=unused-variable]
   int i,j,k,p, i2, j2;
                ^~
sudoku.c:48:13: error: unused variable ‘p’ [-Werror=unused-variable]
   int i,j,k,p, i2, j2;
             ^
sudoku.c:48:11: error: unused variable ‘k’ [-Werror=unused-variable]
   int i,j,k,p, i2, j2;
           ^
sudoku.c:48:9: error: unused variable ‘j’ [-Werror=unused-variable]
   int i,j,k,p, i2, j2;
         ^
sudoku.c:48:7: error: unused variable ‘i’ [-Werror=unused-variable]
   int i,j,k,p, i2, j2;
       ^
cc1: all warnings being treated as errors
Compilation failed
3b260ad
Thu May 12 16:06:19 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:50:9: error: unused variable ‘comprobacion’ [-Werror=unused-variable]
   int * comprobacion = (int *)calloc(10, sizeof(int));
         ^~~~~~~~~~~~
sudoku.c:49:7: error: unused variable ‘numcomprob’ [-Werror=unused-variable]
   int numcomprob;
       ^~~~~~~~~~
sudoku.c:48:13: error: unused variable ‘p’ [-Werror=unused-variable]
   int i,j,k,p;
             ^
sudoku.c:48:11: error: unused variable ‘k’ [-Werror=unused-variable]
   int i,j,k,p;
           ^
sudoku.c:48:9: error: unused variable ‘j’ [-Werror=unused-variable]
   int i,j,k,p;
         ^
sudoku.c:48:7: error: unused variable ‘i’ [-Werror=unused-variable]
   int i,j,k,p;
       ^
cc1: all warnings being treated as errors
Compilation failed
8a03ef8
Thu May 12 16:10:02 UTC 2022: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:11: error: unused variable ‘comprobacion’ [-Werror=unused-variable]
     int * comprobacion = (int *)calloc(10, sizeof(int));
           ^~~~~~~~~~~~
sudoku.c:48:13: error: unused variable ‘p’ [-Werror=unused-variable]
   int i,j,k,p;
             ^
sudoku.c:48:11: error: unused variable ‘k’ [-Werror=unused-variable]
   int i,j,k,p;
           ^
cc1: all warnings being treated as errors
Compilation failed
d5d0091
Fri May 13 01:39:25 UTC 2022: 
 sudoku.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:11: error: unused variable ‘comprobacion’ [-Werror=unused-variable]
     int * comprobacion = (int *)calloc(10, sizeof(int));
           ^~~~~~~~~~~~
sudoku.c:48:13: error: unused variable ‘p’ [-Werror=unused-variable]
   int i,j,k,p;
             ^
sudoku.c:48:11: error: unused variable ‘k’ [-Werror=unused-variable]
   int i,j,k,p;
           ^
sudoku.c: In function ‘DFS’:
sudoku.c:109:11: error: ‘Node {aka struct <anonymous>}’ has no member named ‘visited’
      if(!n->visited){
           ^~
sudoku.c:110:10: error: implicit declaration of function ‘print_tag’; did you mean ‘print_node’? [-Werror=implicit-function-declaration]
          print_tag(n); n->visited=1;
          ^~~~~~~~~
          print_node
sudoku.c:110:25: error: ‘Node {aka struct <anonymous>}’ has no member named ‘visited’
          print_tag(n); n->visited=1;
                         ^~
sudoku.c:120:10: error: expected expression before ‘Node’
   return Node;
          ^~~~
sudoku.c:123:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
5877eac
Fri May 13 01:40:43 UTC 2022: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:11: error: unused variable ‘comprobacion’ [-Werror=unused-variable]
     int * comprobacion = (int *)calloc(10, sizeof(int));
           ^~~~~~~~~~~~
sudoku.c:48:13: error: unused variable ‘p’ [-Werror=unused-variable]
   int i,j,k,p;
             ^
sudoku.c:48:11: error: unused variable ‘k’ [-Werror=unused-variable]
   int i,j,k,p;
           ^
sudoku.c: In function ‘DFS’:
sudoku.c:109:11: error: ‘Node {aka struct <anonymous>}’ has no member named ‘visited’
      if(!n->visited){
           ^~
sudoku.c:121:10: error: ‘n’ undeclared (first use in this function)
   return n;
          ^
sudoku.c:121:10: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:123:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
fcc7b8b
Fri May 13 01:43:56 UTC 2022: 
 sudoku.c | 28 ++++++++++++++++++++++++++--
 1 file changed, 26 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:11: error: unused variable ‘comprobacion’ [-Werror=unused-variable]
     int * comprobacion = (int *)calloc(10, sizeof(int));
           ^~~~~~~~~~~~
sudoku.c:65:13: error: unused variable ‘comprobacion’ [-Werror=unused-variable]
       int * comprobacion = (int *)calloc(10, sizeof(int));
             ^~~~~~~~~~~~
sudoku.c:78:21: error: ‘nodo’ undeclared (first use in this function); did you mean ‘Node’?
        printf("%d ",nodo->sudo[i][j]);
                     ^~~~
                     Node
sudoku.c:78:21: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c: At top level:
sudoku.c:88:5: error: expected identifier or ‘(’ before ‘return’
     return 1;
     ^~~~~~
sudoku.c:89:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
sudoku.c: In function ‘DFS’:
sudoku.c:145:10: error: ‘n’ undeclared (first use in this function)
   return n;
          ^
sudoku.c: In function ‘is_valid’:
sudoku.c:83:3: error: control reaches end of non-void function [-Werror=return-type]
   }
   ^
sudoku.c: In function ‘DFS’:
sudoku.c:147:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
f683775
